# lambdacube-workshop

./: HelloEmbedded.hs  README.md  lambdacube-workshop.cabal  lc-workshop.html  stack.yaml
asteroids/: Asteroids.hs  Asteroids.lc  Logic.hs  lambdacube-asteroids.cabal
asteroids/data/: asteroid.mtl  license.txt  missile.mtl  spaceship.mtl
asteroids/patches/: asteroids01-one-asteroid.patch  asteroids02-spaceship-control.patch  asteroids03-asteroid-instancing.patch  asteroids04-collision-visual.patch  asteroids05-background.patch  asteroids06-bullets.patch  asteroids07-particles.patch  asteroids08-postprocess.patch
asteroids/stages/: Asteroids00.hs  Asteroids00.lc  Asteroids01.hs  Asteroids01.lc  Asteroids02.hs  Asteroids02.lc  Asteroids03.hs  Asteroids04.hs  Asteroids04.lc  Asteroids05.hs  Asteroids06.hs  Asteroids06.lc  Asteroids07.hs  Asteroids07.lc  Asteroids08.hs  Asteroids08.lc  Asteroids_orig.hs  Asteroids_orig.lc
hello/: HelloEmbedded.hs  lambdacube-hello.cabal
hello-obj/: HelloOBJ.hs  lambdacube-hello-obj.cabal
lambdacube-obj/: LICENSE  lambdacube-obj.cabal
lambdacube-obj/LambdaCube/: MtlParser.hs  OBJ.hs
