name:                lambdacube-obj
version:             0.1.0.0
synopsis:            Wavefront OBJ loader for LambdaCube 3D
description:         Wavefront OBJ loader for LambdaCube 3D
homepage:            http://lambdacube3d.com
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple

extra-source-files:  

cabal-version:       >=1.10

library
  exposed-modules:
    LambdaCube.OBJ
    LambdaCube.MtlParser
  -- other-modules:
  -- other-extensions:
  build-depends:
    base,
--    bytestring >=0.10 && <0.11,
    lambdacube-gl >=0.5 && <1,
--    aeson >=0.11 && <0.12,
--    vect >=0.4 && <0.5,
    containers >=0.5 && <0.6,
    mtl >=2.2 && <2.3,
    text >=1.2 && <1.3,
    vector >=0.11 && <0.12,
    JuicyPixels >=3.2 && <3.3,
    wavefront >=0.7 && <0.8

  hs-source-dirs:      .
  default-language:    Haskell2010

